# vacasa-ha

./: .coverage  .env.example  .gitignore  .mypy.ini  .pre-commit-config-ci.yaml  .pre-commit-config.yaml  .roomodes  CHANGELOG.md  DEPLOYMENT.md  LICENSE  README.md  coverage.xml  deploy.sh  hacs.json  logs.sh  new-prod-release.sh  outdated.json  push-development.sh  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  requirements_test.txt  setup.cfg  test_performance_components.py  test_performance_optimization.py  validate_hacs_compliance.py
.clinerules/workflows/: release_new_version.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: auto-release.yml  auto-tag.yml  auto_release.yml  ci.yml  claude-pr-review.yml  codeql.yml  dependencies.yml  hacs.yaml  hacs.yml  hassfest.yaml  hassfest.yml  linting.yaml  linting.yml  release.yaml  release.yml  stale.yaml  stale.yml  tests.yaml  tests.yml  validate.yaml  validate.yml
custom_components/vacasa/: README.md  __init__.py  api_auth.py  api_client.py  api_data.py  binary_sensor.py  cached_data.py  calendar.py  const.py  (+6 more)
memory-bank/: .clinerules  activeContext.md  debuggingStrategy.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md  testStrategy.md
tests/: __init__.py  conftest.py  test_api_client.py  test_binary_sensor.py  test_cached_data.py  test_calendar.py  test_config_flow.py  test_init_helpers.py  test_sensor_platform.py  test_unit_cache.py
(+1 files in other folders)
